# node

./: .gitignore  CHANGELOG.archived.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  envoy-grpc-web.yaml  security_fix.md  security_fix.patch  tatus
.cargo/: config.toml
crates/db/: Cargo.toml  README.md
crates/db/src/: conv.rs  errors.rs  init.rs  lib.rs  manager.rs  migration.rs
crates/db/src/migration/: build_script.rs  builder.rs  entry.rs  migrator.rs  mod.rs  schema.rs  schema_hash.rs
crates/db/src/sqlite/: codec.rs  in_list.rs  mod.rs  pool.rs  tx.rs
crates/large-smt/: Cargo.toml  README.md
crates/large-smt-backend-rocksdb/: Cargo.toml  README.md
crates/large-smt-backend-rocksdb/src/: helpers.rs  lib.rs  rocksdb.rs  rocksdb_snapshot.rs
crates/large-smt/src/: lib.rs  rocksdb.rs
crates/ntx-builder/: Cargo.toml  build.rs
crates/ntx-builder/src/: block_producer.rs  builder.rs  chain_state.rs  coordinator.rs  inflight_note.rs  lib.rs  remote_prover.rs  server.rs  store.rs  test_utils.rs
crates/ntx-builder/src/actor/: account_state.rs  candidate.rs  execute.rs  inflight_note.rs  mod.rs  note_state.rs
crates/ntx-builder/src/clients/: block_producer.rs  mod.rs  store.rs  validator.rs
crates/ntx-builder/src/db/: errors.rs  manager.rs  migrations.rs  mod.rs  schema.rs  schema_hash.rs
crates/ntx-builder/src/db/migrations/2026020900000_setup/: up.sql
crates/ntx-builder/src/db/models/: conv.rs  mod.rs
crates/ntx-builder/src/state/: mod.rs
crates/store/: Cargo.toml  README.md  build.rs
crates/store/benches/: account_tree.rs  state_load.rs
crates/store/src/: blocks.rs  errors.rs  lib.rs  proven_tip.rs
crates/store/src/account_state_forest/: mod.rs  tests.rs
crates/store/src/accounts/: mod.rs  tests.rs
crates/store/src/db/: manager.rs  migrations.rs  mod.rs  schema.rs  schema_hash.rs  tests.rs
crates/store/src/db/migrations/: 001_initial.sql  002_index_optimizations.sql  003_block_headers_without_rowid.sql
crates/store/src/db/models/: conv.rs  mod.rs  utils.rs
crates/store/src/genesis/: mod.rs
crates/store/src/genesis/config/: errors.rs  mod.rs  tests.rs
crates/store/src/inner_forest/: mod.rs  tests.rs
crates/store/src/server/: api.rs  block_producer.rs  block_prover_client.rs  block_replica_client.rs  mod.rs  ntx_builder.rs  ntx_producer.rs  proof_replica_client.rs  proof_scheduler.rs  replica.rs  replica_client.rs  replica_sync.rs  rpc_api.rs
crates/store/src/state/: account.rs  apply_block.rs  apply_proof.rs  bootstrap.rs  disk_monitor.rs  loader.rs  mod.rs  replica.rs  subscription.rs  sync_state.rs  tests.rs  writer.rs  writer_guard.rs
crates/tracing/: Cargo.toml  README.md
crates/tracing-macro/: Cargo.toml  README.md  allowlist.txt
crates/tracing-macro/src/: allowed.rs  event.rs  instrument.rs  level.rs  lib.rs  log.rs  metadata.rs  name.rs  span.rs  target.rs  tests.rs  user.rs
crates/tracing-macro/tests/: ui.rs
crates/tracing-macro/tests/ui/: event_format_string.rs  event_format_string.stderr  event_missing_justification.rs  event_missing_justification.stderr  fixed_event_rejects_level.rs  fixed_event_rejects_level.stderr  instrument_missing_target.rs  instrument_missing_target.stderr  span_missing_name.rs  span_missing_name.stderr
crates/tracing-targets/: Cargo.toml
crates/tracing-targets/src/: lib.rs
crates/tracing/src/: catalog.rs  filter.rs  install.rs  lib.rs  test_utils.rs  user.rs
crates/tracing/src/event/: mod.rs
crates/tracing/src/exporter/: mod.rs  otel.rs  stdout.rs
crates/tracing/src/field/: block_header.rs  mod.rs  protocol.rs
crates/tracing/src/internal/: active_span.rs  control_plane.rs  filters.rs  mod.rs  panic.rs  user_bridge.rs
crates/tracing/src/object/: block.rs  mod.rs
crates/tracing/src/span/: mod.rs
crates/tracing/tests/: ui.rs
crates/tracing/tests/ui/instrument/: dotted_field_not_in_allowlist.rs  dotted_field_not_in_allowlist.stderr  err_on_async_trait.rs  err_on_async_trait.stderr  err_requires_result.rs  err_requires_result.stderr  field_not_in_allowlist.rs  field_not_in_allowlist.stderr  report_and_err_exclusive.rs  report_and_err_exclusive.stderr  report_on_async_trait.rs  report_on_async_trait.stderr  report_on_impl_future.rs  report_on_impl_future.stderr  report_on_pin_box_future.rs  report_on_pin_box_future.stderr  report_requires_result.rs  report_requires_result.stderr  ret_report_requires_result.rs  ret_report_requires_result.stderr
crates/tracing/tests/ui/log/: component_with_unlisted_field.rs  component_with_unlisted_field.stderr  dotted_field_not_in_allowlist.rs  dotted_field_not_in_allowlist.stderr  field_not_in_allowlist.rs  field_not_in_allowlist.stderr
crates/tracing/tests/ui/pass/: instrument.rs  instrument_root.rs  log.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: block_cache.rs  clap.rs  config.rs  crypto.rs  fee.rs  fifo_cache.rs  fs.rs  genesis.rs  grpc.rs  lib.rs  limiter.rs  logging.rs  lru_cache.rs  panic.rs  shutdown.rs  signer.rs  spawn.rs  tasks.rs
crates/utils/src/clap/: rocksdb.rs
crates/utils/src/grpc/: connect_info.rs  layers.rs
crates/utils/src/tracing/: grpc.rs  mod.rs  span_ext.rs
crates/utils/tests/: tracing_macros.rs
crates/utils/tests/ui/tracing_macros/: invalid_field_name.rs  invalid_field_name.stderr  outside_miden_instrument.rs  outside_miden_instrument.stderr  pass.rs
crates/validator/: Cargo.toml  README.md  build.rs
crates/validator/src/: lib.rs
crates/validator/src/block_validation/: mod.rs
crates/validator/src/db/: database.rs  errors.rs  kv_conv.rs  migrations.rs  mod.rs  models.rs  schema.rs
crates/validator/src/server/: mod.rs  sign_block.rs  status.rs  submit_proven_transaction.rs  tests.rs
crates/validator/src/signers/: kms.rs  mod.rs
crates/validator/src/tx_validation/: data_store.rs  info.rs  mod.rs  validated_tx.rs
xtask/: Cargo.toml
xtask/src/: changelog.rs  comment_reflow.rs  main.rs
xtask/src/changelog/: entry.rs  mod.rs  pr.rs  release.rs  render.rs  stub.rs  tests.rs
xtask/src/changelog/ci/: heuristics.rs  mod.rs  report.rs
(+244 files in other folders)
