[package]
description            = "Miden node's network transaction builder component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node"]
license.workspace      = true
name                   = "miden-node-ntx-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                     = { workspace = true }
deadpool                   = { default-features = false, features = ["managed", "rt_tokio_1"], version = "0.12" }
deadpool-diesel            = { features = ["sqlite"], version = "0.6" }
deadpool-sync              = { default-features = false, features = ["tracing"], version = "0.1" }
diesel                     = { features = ["numeric", "sqlite"], version = "2.3" }
diesel_migrations          = { features = ["sqlite"], version = "2.3" }
futures                    = { workspace = true }
indexmap                   = { workspace = true }
miden-node-proto           = { workspace = true }
miden-node-utils           = { workspace = true }
miden-protocol             = { default-features = true, workspace = true }
miden-remote-prover-client = { features = ["tx-prover"], workspace = true }
miden-tx                   = { default-features = true, workspace = true }
thiserror                  = { workspace = true }
tokio                      = { features = ["rt-multi-thread"], workspace = true }
tokio-stream               = { workspace = true }
tokio-util                 = { version = "0.7" }
tonic                      = { workspace = true }
tracing                    = { workspace = true }
url                        = { workspace = true }

[dev-dependencies]
miden-node-test-macro = { path = "../test-macro" }
miden-node-utils      = { features = ["testing"], workspace = true }
miden-protocol        = { default-features = true, features = ["testing"], workspace = true }
miden-standards       = { workspace = true }
rstest                = { workspace = true }
