[package]
authors.workspace      = true
description            = "Miden node's state store component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "store"]
license.workspace      = true
name                   = "miden-node-store"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow                             = { workspace = true }
deadpool                           = { features = ["managed", "rt_tokio_1"], workspace = true }
deadpool-diesel                    = { features = ["sqlite"], workspace = true }
deadpool-sync                      = { features = ["tracing"], workspace = true }
diesel                             = { features = ["numeric", "sqlite"], workspace = true }
diesel_migrations                  = { features = ["sqlite"], workspace = true }
fs-err                             = { workspace = true }
futures                            = { workspace = true }
hex                                = { version = "0.4" }
indexmap                           = { workspace = true }
miden-block-prover                 = { workspace = true }
miden-crypto                       = { features = ["concurrent", "hashmaps"], workspace = true }
miden-node-proto                   = { workspace = true }
miden-node-proto-build             = { features = ["internal"], workspace = true }
miden-node-rocksdb-cxx-linkage-fix = { optional = true, workspace = true }
miden-node-utils                   = { workspace = true }
miden-remote-prover-client         = { features = ["block-prover"], workspace = true }
miden-standards                    = { workspace = true }
# TODO remove `testing` from `miden-protocol`, required for `BlockProof::new_dummy`
miden-protocol    = { features = ["std", "testing"], workspace = true }
pretty_assertions = { workspace = true }
rand              = { workspace = true }
rand_chacha       = { workspace = true }
serde             = { features = ["derive"], version = "1" }
thiserror         = { workspace = true }
tokio             = { features = ["fs", "rt-multi-thread"], workspace = true }
tokio-stream      = { features = ["net"], workspace = true }
toml              = { version = "0.9" }
tonic             = { default-features = true, workspace = true }
tonic-reflection  = { workspace = true }
tower-http        = { features = ["util"], workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }

[build-dependencies]
miden-node-rocksdb-cxx-linkage-fix = { workspace = true }

[dev-dependencies]
assert_matches        = { workspace = true }
criterion             = { version = "0.5" }
fs-err                = { workspace = true }
miden-node-test-macro = { workspace = true }
miden-node-utils      = { features = ["testing", "tracing-forest"], workspace = true }
miden-protocol        = { default-features = true, features = ["testing"], workspace = true }
miden-standards       = { features = ["testing"], workspace = true }
rand                  = { workspace = true }
regex                 = { version = "1.11" }
termtree              = { version = "0.5" }

[features]
default = ["rocksdb"]
rocksdb = ["miden-crypto/rocksdb", "miden-node-rocksdb-cxx-linkage-fix"]

[[bench]]
harness           = false
name              = "account_tree"
required-features = ["rocksdb"]

[package.metadata.cargo-machete]
# This is an indirect dependency for which we need to enable optimisations
# via feature flags. Because we don't use it directly in code, machete
# identifies it as unused.
ignored = ["miden-crypto", "miden-node-rocksdb-cxx-linkage-fix"]
