[package]
categories  = ["development-tools::debugging"]
description = "Tracing utilities for Miden node with enhanced error reporting"
keywords    = ["miden", "node", "tracing"]
name        = "miden-node-tracing"

edition.workspace      = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
miden-node-tracing-macro = { workspace = true }
miden-node-utils         = { workspace = true }
opentelemetry            = { version = "0.31" }
tracing                  = { workspace = true }
