[package]
authors.workspace      = true
description            = "Miden node's validator component"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "node", "validator"]
license.workspace      = true
name                   = "miden-node-validator"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]

[dependencies]
anyhow                 = { workspace = true }
async-trait            = { workspace = true }
aws-config             = { version = "1.8.14" }
aws-sdk-kms            = { version = "1.100" }
deadpool-diesel        = { workspace = true }
diesel                 = { workspace = true }
diesel_migrations      = { workspace = true }
k256                   = "0.13.4"
miden-node-proto       = { workspace = true }
miden-node-proto-build = { features = ["internal"], workspace = true }
miden-node-store       = { workspace = true }
miden-node-utils       = { features = ["testing"], workspace = true }
miden-protocol         = { workspace = true }
miden-tx               = { workspace = true }
spki                   = "0.7.3"
thiserror              = { workspace = true }
tokio                  = { features = ["macros", "net", "rt-multi-thread"], workspace = true }
tokio-stream           = { features = ["net"], workspace = true }
tonic                  = { default-features = true, features = ["transport"], workspace = true }
tonic-reflection       = { workspace = true }
tower-http             = { features = ["util"], workspace = true }
tracing                = { workspace = true }

[dev-dependencies]
